--- a/portfolio.html
+++ b/portfolio.html
@@ -51,67 +51,76 @@
                </ul>
                <ul class="main__information-project-details list">
                   <li class="main__information-project-item">
-                     <a href="#"><img src="./images/img4.jpg" alt="Три человека" width="370" ></a>
-                     <div class="main__information-project-item-border">
-                        <h3 class="main__information-project-item-title">Технокряк</h3>
-                        <p class="grey detail">Веб-сайт</p>
-                     </div>
+                     <a class="link" href="#"><img src="./images/img4.jpg" alt="Три человека" width="370" >
+                        <div class="main__information-project-item-border">
+                           <h3 class="main__information-project-item-title">Технокряк</h3>
+                           <p class="grey detail">Веб-сайт</p>
+                        </div>
+                     </a>
                   </li>
                   <li class="main__information-project-item">
-                     <a href="#"><img src="./images/img5.jpg" alt="два человека играют в баскетбол"  width="370" ></a>
-                     <div class="main__information-project-item-border">
-                        <h3 class="main__information-project-item-title">Постер New Orlean vs Golden Star</h3>
-                        <p class="grey detail">Дизайн</p>
-                     </div>    
+                     <a class="link" href="#"><img src="./images/img5.jpg" alt="два человека играют в баскетбол"  width="370" >
+                        <div class="main__information-project-item-border">
+                           <h3 class="main__information-project-item-title">Постер New Orlean vs Golden Star</h3>
+                           <p class="grey detail">Дизайн</p>
+                        </div>
+                     </a>    
                   </li>
                   <li class="main__information-project-item">
-                     <a href="#"><img src="./images/img6.jpg" alt="логотип морского ресторана"  width="370" ></a>
-                     <div class="main__information-project-item-border">
-                        <h3 class="main__information-project-item-title">Ресторан Seafood</h3>
-                        <p class="grey detail">Приложение</p>
-                     </div>    
+                     <a class="link" href="#"><img src="./images/img6.jpg" alt="логотип морского ресторана"  width="370" >
+                        <div class="main__information-project-item-border">
+                           <h3 class="main__information-project-item-title">Ресторан Seafood</h3>
+                           <p class="grey detail">Приложение</p>
+                        </div>
+                     </a>    
                   </li>   
                   <li class="main__information-project-item">
-                     <a href="#"><img src="./images/img7.jpg" alt="наушники"  width="370" ></a>
-                     <div class="main__information-project-item-border">
-                        <h3 class="main__information-project-item-title">Проект Prime</h3>
-                        <p class="grey detail">Маркетинг</p>
-                     </div>    
+                     <a class="link" href="#"><img src="./images/img7.jpg" alt="наушники"  width="370" >
+                        <div class="main__information-project-item-border">
+                           <h3 class="main__information-project-item-title">Проект Prime</h3>
+                           <p class="grey detail">Маркетинг</p>
+                        </div>
+                     </a>   
                   </li>  
                   <li class="main__information-project-item">
-                     <a href="#"><img src="./images/img8.jpg" alt="две коробки"  width="370" ></a>
-                     <div class="main__information-project-item-border">
-                        <h3 class="main__information-project-item-title">Проект Boxes</h3>
-                        <p class="grey detail">Приложение</p>
-                     </div>    
+                     <a class="link" href="#"><img src="./images/img8.jpg" alt="две коробки"  width="370" >
+                        <div class="main__information-project-item-border">
+                           <h3 class="main__information-project-item-title">Проект Boxes</h3>
+                           <p class="grey detail">Приложение</p>
+                        </div>
+                     </a>    
                   </li>
                   <li class="main__information-project-item">
-                     <a href="#"><img src="./images/img9.jpg" alt="рабочий стол"  width="370" ></a>
-                     <div class="main__information-project-item-border">
-                        <h3 class="main__information-project-item-title" lang="en">Inspiration has no Borders</h3>
-                        <p class="grey detail">Веб-сайт</p>
-                     </div>    
+                     <a class="link" href="#"><img src="./images/img9.jpg" alt="рабочий стол"  width="370" >
+                        <div class="main__information-project-item-border">
+                           <h3 class="main__information-project-item-title" lang="en">Inspiration has no Borders</h3>
+                           <p class="grey detail">Веб-сайт</p>
+                        </div>
+                     </a>    
                   </li>
                   <li class="main__information-project-item">
-                     <a href="#"><img src="./images/img10.jpg" alt="открытая книга"  width="370" ></a>
-                     <div class="main__information-project-item-border">
-                        <h3 class="main__information-project-item-title">Издание Limited Edition</h3>
-                        <p class="grey detail">Дизайн</p>
-                     </div>    
+                     <a class="link" href="#"><img src="./images/img10.jpg" alt="открытая книга"  width="370" >
+                        <div class="main__information-project-item-border">
+                           <h3 class="main__information-project-item-title">Издание Limited Edition</h3>
+                           <p class="grey detail">Дизайн</p>
+                        </div>
+                     </a>    
                   </li>   
                   <li class="main__information-project-item">
-                     <a href="#"><img src="./images/img11.jpg" alt="метка"  width="370" ></a>
-                     <div class="main__information-project-item-border">
-                        <h3 class="main__information-project-item-title">Проект Lab</h3>
-                        <p class="grey detail">Маркетинг</p>
-                     </div>    
+                     <a class="link" href="#"><img src="./images/img11.jpg" alt="метка"  width="370" >
+                        <div class="main__information-project-item-border">
+                           <h3 class="main__information-project-item-title">Проект Lab</h3>
+                           <p class="grey detail">Маркетинг</p>
+                        </div>
+                     </a>    
                   </li>  
                   <li class="main__information-project-item">
-                     <a href="#"><img src="./images/img12.jpg" alt="ноутбук" width="370" ></a>
-                     <div class="main__information-project-item-border">
-                        <h3 class="main__information-project-item-title" lang="en">Growing Business</h3>
-                        <p class="grey detail">Приложение</p>
-                     </div>   
+                     <a class="link" href="#"><img src="./images/img12.jpg" alt="ноутбук" width="370" >
+                        <div class="main__information-project-item-border">
+                           <h3 class="main__information-project-item-title" lang="en">Growing Business</h3>
+                           <p class="grey detail">Приложение</p>
+                        </div>
+                     </a>   
                   </li>  
                </ul>
             </div> 
